--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Mathe</title>
+        <title>Einfach Rechnen</title>
         <style media="screen">
             :root {
                 --success-color: #4CAF50;
